# lawd

./: .gitignore  ABBREVIATIONS.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 23e03d0a9ba7_created_all_the_tables.py  5e12129cf900_added_password_field.py  733d91ccfd4c_there_is_a_problem_sometimes_telegram_.py  7961e82be540_three_tables.py  b78aea1d085b_replaced_rate_with_descriptioon.py  faacac24cbcf_added_activity_status.py
api/: main.py
bot/: config.py  keyboards.py  main.py  views.py
bot/middleware/: auth.py
bot/routers/: __init__.py  botinfo.txt  sessions.py  signup.py  std.py  tags.py
bot/states/: __init__.py  tags.py
bot/utils/: __init__.py
common/: __init__.py  logger.py  logging_config.py
database/: __init__.py
database/models/: base.py  session.py  user.py
src/: config.py
src/api/: main.py
src/api/dependencies/: __init__.py  api_key.py
src/api/routers/: __init__.py  auth.py
src/common/: __init__.py  logger.py  logging_config.py
src/database/: __init__.py  db.py
src/database/models/: base.py  tag.py  user.py
src/schemas/: __init__.py  users.py
